bug 246616 - moz-icon should be able to draw special virtual namespace icons for Desktop and My Documents, r=mscott